--- a/petroleum/app/views/soldiers/show.html.erb
+++ b/petroleum/app/views/soldiers/show.html.erb
@@ -1,23 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Active:</b>
-  <%= @soldier.active %>
-</p>
-
-<p>
-  <b>Ismale:</b>
-  <%= @soldier.ismale %>
+  <b>Name:</b>
+  <%= @soldier.name %>
 </p>
 
 <p>
   <b>Firstname:</b>
   <%= @soldier.firstname %>
-</p>
-
-<p>
-  <b>Familyname:</b>
-  <%= @soldier.familyname %>
 </p>
 
 <p>
@@ -28,6 +18,16 @@
 <p>
   <b>Birthdate:</b>
   <%= @soldier.birthdate %>
+</p>
+
+<p>
+  <b>Active:</b>
+  <%= @soldier.active %>
+</p>
+
+<p>
+  <b>Ismale:</b>
+  <%= @soldier.ismale %>
 </p>
 
 <p>
@@ -118,6 +118,41 @@
 <p>
   <b>Isgct:</b>
   <%= @soldier.isgct %>
+</p>
+
+<p>
+  <b>L2 balescetageporte:</b>
+  <%= @soldier.l2_balescetageporte %>
+</p>
+
+<p>
+  <b>L3 resbat:</b>
+  <%= @soldier.l3_resbat %>
+</p>
+
+<p>
+  <b>L4 numvoie:</b>
+  <%= @soldier.l4_numvoie %>
+</p>
+
+<p>
+  <b>L5 bptsabureau:</b>
+  <%= @soldier.l5_bptsabureau %>
+</p>
+
+<p>
+  <b>L6 commune:</b>
+  <%= @soldier.l6_commune %>
+</p>
+
+<p>
+  <b>L7 codepostal:</b>
+  <%= @soldier.l7_codepostal %>
+</p>
+
+<p>
+  <b>L8 pays:</b>
+  <%= @soldier.l8_pays %>
 </p>
 
 
